<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gosteeBackgroundColor"
    tools:context=".Controllers.Registration">

    <include
        android:id="@+id/include2"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/registration_info"
                android:textAlignment="center"
                android:textColor="#343434"
                android:textSize="12.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,NotSibling" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/textContact"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="45dp" />

            <EditText
                android:id="@+id/edLogin"
                android:layout_width="242.8dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/back_edittext"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/textPassword"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edLogin" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="242.8dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/back_edittext"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/textPasswordRepeat"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edPassword" />

            <EditText
                android:id="@+id/edPasswordRepeat"
                android:layout_width="242.8dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/back_edittext"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView68"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/textName"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/edPasswordRepeat"
                tools:layout_editor_absoluteX="45dp" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="242.8dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/back_edittext"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/edName"
                tools:layout_editor_absoluteX="45dp" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="242.8dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/back_edittext"
                android:ems="10"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/phoneNumber"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/edEmail"
                tools:layout_editor_absoluteX="45dp" />

            <EditText
                android:id="@+id/edPhone"
                android:layout_width="242.8dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/back_edittext"
                android:ems="10"
                android:gravity="center"
                android:inputType="phone"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnReg"
                android:layout_width="244dp"
                android:layout_height="51.8dp"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="45dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_states"
                android:text="@string/TextButtonReg"
                android:textColor="#efeff9"
                android:textSize="12.5sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edPhone" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.constraint.ConstraintLayout

        android:id="@+id/regProcecc"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView3">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="РЕГИСТРАЦИЯ..."
            android:textColor="@color/colorDarkGray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>