<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfdfdf"
    tools:context=".Controllers.MainActivity">

    <ImageView
        android:id="@+id/imVAddCard"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/figuregray" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="114.5dp"
        android:layout_height="61.8dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imVAddCard"
        app:srcCompat="@drawable/gosteekassamain"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imVAddCard"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="113.8dp"
                android:gravity="center_horizontal"
                android:text="@string/textAuthorization"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGray"
                android:textSize="16.8sp"
                android:textStyle="normal|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="244dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="23.3dp"
                android:background="@drawable/back_edittext"
                android:drawableStart="@drawable/humanicons"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="244dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7.3dp"

                android:background="@drawable/back_edittext"
                android:drawableStart="@drawable/password"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLogin" />

            <Button
                android:id="@+id/btnLogIn"

                android:layout_width="244dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="27.8dp"
                android:background="@drawable/button_states"
                android:text="@string/textInput"
                android:textColor="#efeff9"
                android:textSize="12.5sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <TextView
                android:id="@+id/tvRegistarton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="98.8dp"
                android:layout_marginTop="20.5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingBottom="60dp"
                android:text="@string/textReg"
                android:textColor="@color/colorDarkGray"
                android:textSize="12.5sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

            <TextView
                android:id="@+id/tvRecovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="98.8dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20.5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingBottom="60dp"
                android:text="@string/textRememberPassword"
                android:textColor="@color/colorDarkGray"
                android:textSize="12.5sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvRegistarton"
                app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49.8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/todo1"
                    app:srcCompat="@drawable/google"
                    tools:ignore="NestedWeights"
                    tools:layout_editor_absoluteX="241dp"
                    tools:layout_editor_absoluteY="569dp" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    app:srcCompat="@drawable/vk"
                    tools:ignore="ContentDescription,NestedWeights"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="582dp" />
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.constraint.ConstraintLayout

        android:id="@+id/inputProcecc"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="АВТОРИЗАЦИЯ..."
            android:textColor="@color/colorDarkGray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>