<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gosteeBackgroundColor"
    tools:context=".Controllers.RecoveryPassword">

    <include
        android:id="@+id/include2"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/textRecoveryPassword"
                android:textAlignment="center"
                android:textColor="#343434"
                android:textSize="12.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,NotSibling" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/btnSaveRecoveryPassword"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#343434"
                    android:textSize="12.5sp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/inputYourLogin"
                    app:layout_constraintBottom_toTopOf="@+id/edRecoveryPassword"
                    tools:ignore="MissingConstraints,NotSibling"
                    tools:layout_editor_absoluteX="111dp" />

                <EditText
                    android:id="@+id/edRecoveryPassword"
                    android:layout_width="242.8dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/back_edittext"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnSaveRecoveryPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    tools:ignore="LabelFor,MissingConstraints,NotSibling,TextFields" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSaveRecoveryPassword"
                android:layout_width="244dp"
                android:layout_height="51.8dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="45dp"
                android:layout_marginStart="45dp"
                android:background="@drawable/button_states"
                android:text="@string/textSendPassword"
                android:textColor="#efeff9"
                android:textSize="12.5sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout

        android:id="@+id/tempPassProcecc"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include2">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="ОБРАБОТКА ЗАПРОСА..."
            android:textColor="@color/colorDarkGray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>